Resolved referred undefined problem and fixed MAX would jump out of position problem

--- a/src/style/dice.less
+++ b/src/style/dice.less
@@ -191,7 +191,8 @@
                             color: white;
                             height: 56px;
                             // minus border
-                            
+                            padding: 0px;
+
                             @media @phone{
                                 padding: 0px 24px;
                                 height: 41px;
